--- a/.github/workflows/test_bundle.yml
+++ b/.github/workflows/test_bundle.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           package-name: ros_tutorials navigation
           source-ros-binary-installation: kinetic
-          vcs-repo-file-url: "${{ github.workspace }}/.github/workflows/test_bundle.repos"
+          vcs-repo-file-url: "https://raw.githubusercontent.com/dabonnie/colcon-bundle/master/.github/workflows/test_bundle.repos"
       - uses: actions/setup-python@v1
         with:
           python-version: 3.5
